fixed overflow on slider

--- a/src/widgets/ItemSlider/ItemSlider.module.scss
+++ b/src/widgets/ItemSlider/ItemSlider.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/mixins/mixins.scss";
 @import "../../styles/utils/variables.scss";
 .sliderContainer {
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .sliderTitle {
